# soltools

./: .env.dev  .env.prod  .gitignore  Dockerfile  Makefile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
templates/: index.html  layout.html  login_form.html  register_form.html
templates/users/: users_delete.html  users_list.html  users_update.html
templates/wallets/: wallets_add.html  wallets_create.html  wallets_delete.html  wallets_list.html  wallets_transfer.html  wallets_transfer_confirm.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
wallets/: forms.py  models.py  tests.py  urls.py  views.py
wallets/migrations/: 0001_initial.py  0002_alter_wallets_key.py
webtools/: admin.py  asgi.py  forms.py  settings.py  urls.py  utils.py  views.py  wsgi.py
